--- a/basic_course.ipynb
+++ b/basic_course.ipynb
@@ -926,11 +926,23 @@
    "source": [
     "git status: verifica o status do arquivo\n",
     "\n",
-    "git add: move para área de stage como um novo arquivo ou atualiza um arquivo existente\n",
+    "git add ... : move para área de stage como um novo arquivo ou atualiza um arquivo existente\n",
     "\n",
-    "git commit -m\"\": comenta as modificações\n",
+    "git commit -m\"...\": comenta as modificações\n",
     "\n",
-    "git"
+    "git log: trás o histórico de commit\n",
+    "\n",
+    "git restore ... : remover as modificações\n",
+    "\n",
+    "git push: enviar para o repositório remoto \n",
+    "\n",
+    "git pull: trazer alterações feitas no repositório remoto\n",
+    "\n",
+    "git fetch: verificar as alterações no repositório remoto antes de realmente alterar o código\n",
+    "\n",
+    "git branch ... : cria branch\n",
+    "\n",
+    "git checkout ... : vai para a branch especifica\n"
    ]
   }
  ],
